--- a/Blood-Stream-signUp/package.json
+++ b/Blood-Stream-signUp/package.json
@@ -4,7 +4,10 @@
   "description": "Sign Up with DB and social network using passport",
   "main": "./api/index.js",
   "scripts": {
-    "dev": "set DEBUG=app:* && nodemon api/index"
+    "dev": "set DEBUG=app:* && nodemon api/index",
+    "start": "node api/index.js",
+    "lint": "standard",
+    "lint-fix": "standard --fix"
   },
   "repository": {
     "type": "git",
@@ -21,21 +24,7 @@
   "homepage": "https://github.com/MosqueraSt3/Backend#readme",
   "devDependencies": {
     "chalk": "^4.1.0",
-    "eslint": "^7.9.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "husky": "^4.3.0",
-    "lint-staged": "^10.4.0",
-    "nodemon": "^2.0.4",
-    "prettier": "^2.1.2"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.js": "eslint --cache --fix"
+    "nodemon": "^2.0.4"
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
@@ -46,6 +35,8 @@
     "nanoid": "^3.1.12",
     "passport": "^0.4.1",
     "passport-http": "^0.3.0",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "standard": "^14.3.4",
+    "swagger-ui-express": "^4.1.4"
   }
 }
