--- a/config/package.json
+++ b/config/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/CarGDev/Backend#readme",
   "dependencies": {
     "chalk": "^4.1.0",
-    "debug": "^4.1.1"
+    "debug": "^4.1.1",
+    "dotenv": "^8.2.0"
   }
 }
