--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "nodemon index.js",
     "lint": "standard",
     "lint-fix": "standard --fix",
-    "test": "echo \"Error: no test specified\" && exit 0"
+    "test": "DEBUG=Blood-Stream:* &&  nyc --reporte=lcov ava tests/* --verbose"
   },
   "repository": {
     "type": "git",
@@ -31,6 +31,12 @@
   },
   "homepage": "https://github.com/CarGDev/Backend#readme",
   "devDependencies": {
+    "ava": "^3.12.1",
+    "debug": "^4.1.1",
+    "nyc": "^15.1.0",
+    "proxyquire": "^2.1.3",
+    "sinon": "^9.0.3",
+    "sqlite3": "^5.0.0",
     "nodemon": "^2.0.4",
     "standard": "^14.3.4"
   },
