--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "sinon": "^9.0.3",
     "sqlite3": "^5.0.0",
     "nodemon": "^2.0.4",
-    "standard": "^14.3.4"
+    "standard": "^14.3.4",
+    "chalk": "^4.1.0",
+    "supertest": "^4.0.2"
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
@@ -64,6 +66,20 @@
     "request": "^2.88.2",
     "sequelize": "^6.3.5",
     "sign-up": "file:./Blood-Stream-signUp",
-    "swagger-ui-express": "^4.1.4"
+    "swagger-ui-express": "^4.1.4",
+    "@hapi/boom": "^7.4.2",
+    "axios": "^0.19.0",
+    "cookie-parser": "^1.4.4",
+    "express-session": "^1.16.2",
+    "helmet": "^4.1.1",
+    "lodash": "^4.17.11",
+    "passport-facebook": "^3.0.0",
+    "passport-oauth": "^1.0.0",
+    "@hapi/joi": "^15.1.0",
+    "@sokratis/passport-linkedin-oauth2": "^2.1.0",
+    "audit": "0.0.6",
+    "passport-google-oauth": "^2.0.0",
+    "passport-session": "^1.0.2",
+    "passport-twitter": "^1.0.4"
   }
 }
