Modifying the env.example

--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,26 @@ DB_USER=
 DB_PASS=
 DB_HOST=
 
-DB_PASS=master01
-DB_HOST=database-1.cpchb6koet7f.us-east-2.rds.amazonaws.com
+// API KEYS
+API_KEY_TOKEN=
+
+// API URL
+API_URL=
+
+//OAUTH
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+
+//SESSION
+SESSION_SECRET=
+
+// API KEYS TWITTER
+TWITTER_CONSUMER_KEY=
+TWITTER_CONSUMER_SECRET=
+
+// USERS
+DEFAULT_ADMIN_PASSWORD=
+DEFAULT_USER_PASSWORD=
+
+// AUTH
+AUTH_JWT_SECRET=
