Adding google auth

--- a/package.json
+++ b/package.json
@@ -44,41 +44,41 @@
     "supertest": "^4.0.2"
   },
   "dependencies": {
+    "@hapi/boom": "^7.4.2",
+    "@hapi/joi": "^15.1.0",
+    "@sokratis/passport-linkedin-oauth2": "^2.1.0",
+    "audit": "0.0.6",
+    "axios": "^0.19.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "chalk": "^4.1.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "debug": "^4.1.1",
     "defaults": "^1.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.16.2",
+    "helmet": "^4.1.1",
     "inquirer": "^7.3.3",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.11",
     "login-app": "file:./Blood-Stream-login",
     "nanoid": "^3.1.12",
     "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth": "^2.0.0",
     "passport-http": "^0.3.0",
     "passport-jwt": "^4.0.0",
+    "passport-oauth": "^1.0.0",
+    "passport-session": "^1.0.2",
+    "passport-twitter": "^1.0.4",
     "pg": "^8.3.3",
     "pg-hstore": "^2.3.3",
     "redis": "^3.0.2",
     "request": "^2.88.2",
     "sequelize": "^6.3.5",
     "sign-up": "file:./Blood-Stream-signUp",
-    "swagger-ui-express": "^4.1.4",
-    "@hapi/boom": "^7.4.2",
-    "axios": "^0.19.0",
-    "cookie-parser": "^1.4.4",
-    "express-session": "^1.16.2",
-    "helmet": "^4.1.1",
-    "lodash": "^4.17.11",
-    "passport-facebook": "^3.0.0",
-    "passport-oauth": "^1.0.0",
-    "@hapi/joi": "^15.1.0",
-    "@sokratis/passport-linkedin-oauth2": "^2.1.0",
-    "audit": "0.0.6",
-    "passport-google-oauth": "^2.0.0",
-    "passport-session": "^1.0.2",
-    "passport-twitter": "^1.0.4"
+    "swagger-ui-express": "^4.1.4"
   }
 }
