--- a/package.json
+++ b/package.json
@@ -52,15 +52,15 @@
     "axios": "^0.19.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
-    "connect-redis": "^5.0.0",
     "chalk": "^4.1.0",
+    "connect-redis": "^5.0.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "debug": "^4.1.1",
-    "express-session": "^1.16.2",
     "defaults": "^1.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.16.2",
     "helmet": "^4.1.1",
     "inquirer": "^7.3.3",
     "jsonwebtoken": "^8.5.1",
@@ -78,6 +78,7 @@
     "pg": "^8.3.3",
     "pg-hstore": "^2.3.3",
     "redis": "^3.0.2",
+    "redis-server": "^1.2.2",
     "request": "^2.88.2",
     "sequelize": "^6.3.5",
     "sign-up": "file:./Blood-Stream-signUp",
