--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "standard",
     "lint-fix": "standard --fix",
     "test": "exit 0",
-    "Add-info": "DEBUG=app:* node Blood-Stream-db/scripts/SeedGenreGames.js && node Blood-Stream-db/scripts/SeedLnGames.js && node Blood-Stream-db/scripts/SeedGameCollections.js && node Blood-Stream-db/scripts/SeedGamesRating.js && DEBUG=app:* node Blood-Stream-db/scripts/SeedPlatformGames.js"
+    "Add-info": "DEBUG=app:* node Blood-Stream-db/scripts/SeedGames.js && node Blood-Stream-db/scripts/SeedUsers.js && node Blood-Stream-db/scripts/SeedLanguages.js && node Blood-Stream-db/scripts/SeedGenres.js && node Blood-Stream-db/scripts/SeedGenreGames.js && node Blood-Stream-db/scripts/SeedLnGames.js && node Blood-Stream-db/scripts/SeedGameCollections.js && node Blood-Stream-db/scripts/SeedGamesRating.js && node Blood-Stream-db/scripts/SeedPlatformGames.js && node Blood-Stream-db/scripts/SeedApiKeys.js && node Blood-Stream-db/scripts/SeedMessage.js"
   },
   "repository": {
     "type": "git",
